--- a/css/styles.css
+++ b/css/styles.css
@@ -8,23 +8,22 @@ body {
 
 
 h1 {
-    text-align: center; /* Centrar tu nombre */
-    color: #223548; /* Azul oscuro */
+    text-align: center; 
+    color: #223548; /
     margin-bottom: 30px;
 }
 
-/* Sección "Acerca de mi" */
+
 #acerca-de-mi {
-    background-color: #c6a6a6; /* Fondo blanco */
+    background-color: #c6a6a6; 
     padding: 20px;
-    border-radius: 10px; /* Bordes redondeados */
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Sombra suave */
+    border-radius: 10px; 
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1); 
     max-width: 800px;
-    margin: 0 auto; /* Centrar la sección */
-}
+    margin: 0 auto; 
 
 #acerca-de-mi h2 {
-    color: #e74c3c; /* Rojo suave para el título */
+    color: #e74c3c; 
 }
 
 #acerca-de-mi p {
@@ -75,3 +74,4 @@ h1 {
 #form-contacto button:hover {
     background-color: #34495e;
 }
+  
